SLING-11568 Allow System Lambda to work on JPMS